--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <h2>Weather Info</h2>
     <div id="weatherInfo">
     </div>
+    <div id="rnbo-device">
+    </div>
     <div id="map"></div>
+    <script type="module" src="rnbo-helpers.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
