--- a/WeatherMusic-v2/index.html
+++ b/WeatherMusic-v2/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="map" style="height: 100vh"></div>
+    <div id="map" style="height: 500px;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
